<resources>
    <string name="app_name">App Siniestralidad</string>
    <string name="home">Inicio</string>
    <string name="search">Buscar</string>
    <string name="settings">Configuraciones</string>
    <string name="hint_nombres">Escribe tus nombres</string>
    <string name="titulo_nombres">Nombres</string>
    <string name="hint_apellidos">Escribe tus apellidos</string>
    <string name="titulo_apellidos">Apellidos</string>
    <string name="hint_celular">Numero de celular</string>
    <string name="titulo_celular">Celular</string>
    <string name="titulo_email">Correo Electronico</string>
    <string name="hint_email">E-mail</string>
    <string name="hint_contrasena">Escribe tu contraseña</string>
    <string name="titulo_contrasena">Contraseña</string>
    <string name="Boton_registrar">REGISTRAR</string>
    <string name="texto_registrar">Registrarse</string>
    <string name="olvidar_password">¿Olvidó su contraseña?</string>
    <string name="login_google">LOGIN WITH GOOGLE</string>
    <string name="login_facebook">LOGIN WITH FACEBOOK</string>
    <string name="inicio_sesion">INICIAR SESIÓN</string>
    <string name="peaton">Peaton</string>
    <string name="ciclista">Ciclista</string>
    <string name="motociclista">Motociclista</string>
    <string name="automovil">Automovil</string>
    <string name="animal">Animal</string>
    <string name="bus">Bus</string>
    <string name="miPerfil">Mi Perfil</string>
    <string name="reportar">Reportar Accidente</string>
    <string name="noticias">Ultimos Reportes</string>
    <string name="configuraciones">Configuraciones</string>
    <string name="numerostelefono">Emergencias</string>
    <string name="ayuda">Ayuda</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="email_recuperacion">Escriba su correo de recuperacion de Contraseña</string>
    <string name="Boton_recuperar">Recuperar</string>

    <string name="facebook_app_id">1183897232550435</string>
    <string name="fb_login_protocol_scheme">fb1183897232550435</string>
    <string name="facebook_client_token">065f93031f1529ce71aa0fd28474fbde</string>
    <string name="titulo_nacimiento">Fecha de Nacimiento</string>
    <string name="fecha_nacimiento">Fecha de Nacimiento</string>
    <string name="Boton_perfil">ACTUALIZAR</string>
    <string name="titulo_ciudad">Ciudad de Residencia</string>
    <string name="hint_ciudad">Ciudad</string>
    <string name="actores_viales">ACTORES VIALES INVOLUCRADOS</string>
    <string name="ubicacion">UBICACION SINIESTRO</string>
    <string name="siguiente">SIGUIENTE</string>
    <string name="descripcion">DESCRIPCION DEL SINIESTRO</string>
    <string name="finalizar">FINALIZAR</string>
    <string name="txt_descripcion">Haga una descripcion del siniestro</string>
    <string name="google_maps_api_key">AIzaSyB3OaqWPqQFJ23_TvNo5TXdij5LWIBS5CM</string>
    <string name="camara">CAMARA</string>
    <string name="galeria">GALERIA</string>
    <string name="email">Correo:</string>
    <string name="correo_actual">Correo actual</string>
    <string name="textAsistencia">Se requiere asistencia medica?</string>
    <string name="regresar">REGRESAR</string>
    <string name="salir">SALIR</string>
    <string name="establecerFoto">CAMBIAR FOTO</string>
    <string name="ubicacionSiniestros">Mapa Siniestros</string>
    <string name="policia">POLICIA NACIONAL</string>
    <string name="emergenciaNacional">LINEA EMERGENCIA NACIONAL</string>
    <string name="cruzRoja">CRUZ ROJA COLOMBIANA</string>
    <string name="bomberos">BOMBEROS</string>
    <string name="defensaCivil">DEFENSA CIVIL</string>
    <string name="emergenciasMedicas">EMERGENCIAS MEDICAS</string>
    <string name="policiaTransito">POLICIA TRANSITO</string>
    <string name="toxicologico">CENTRO TOXICOLOGICO</string>
    <string name="gasnatural">GAS NATURAL</string>
    <string name="acueducto">ACUEDUCTO</string>
    <string name="codensa">CODENSA</string>


    <string-array name="ciudades">
        <item>Bogotá</item>
        <item>Cali</item>
        <item>Medellin</item>
        <item>Manizales</item>
        <item>Tunja</item>
        <item>Cartagena</item>
    </string-array>
</resources>