<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">


    <ImageView
        android:id="@+id/imageView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.101"
        app:srcCompat="@mipmap/ic_launcher_foreground" />

    <EditText
        android:id="@+id/editTextTextPassword2"
        android:layout_width="345dp"
        android:layout_height="50dp"
        android:ems="10"
        android:hint="@string/hint_contrasena"
        android:inputType="textPassword"
        android:textColorHint="@color/blue_king"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        tools:layout_editor_absoluteY="558dp" />

    <EditText
        android:id="@+id/editTextTextEmailAddress2"
        android:layout_width="345dp"
        android:layout_height="50dp"
        android:ems="10"
        android:hint="@string/hint_email"
        android:inputType="textEmailAddress"
        android:textColorHint="@color/blue_king"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        tools:layout_editor_absoluteY="473dp" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="345dp"
        android:layout_height="20dp"
        android:text="@string/titulo_email"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.637" />

    <EditText
        android:id="@+id/editTextPhone"
        android:layout_width="345dp"
        android:layout_height="50dp"
        android:ems="10"
        android:hint="@string/hint_celular"
        android:inputType="phone"
        android:textColorHint="@color/blue_king"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        tools:layout_editor_absoluteY="385dp" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="345dp"
        android:layout_height="20dp"
        android:text="@string/titulo_apellidos"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.39" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="345dp"
        android:layout_height="20dp"
        android:text="@string/titulo_celular"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.513" />

    <EditText
        android:id="@+id/editTextTextPersonName3"
        android:layout_width="345dp"
        android:layout_height="50dp"
        android:ems="10"
        android:hint="@string/hint_nombres"
        android:inputType="textPersonName"
        android:textColorHint="@color/blue_king"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        tools:layout_editor_absoluteY="214dp" />

    <EditText
        android:id="@+id/editTextTextPersonName4"
        android:layout_width="345dp"
        android:layout_height="50dp"
        android:ems="10"
        android:hint="@string/hint_apellidos"
        android:inputType="textPersonName"
        android:textColorHint="@color/blue_king"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        tools:layout_editor_absoluteY="299dp" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="345dp"
        android:layout_height="20dp"
        android:text="@string/titulo_nombres"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.272" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="345dp"
        android:layout_height="20dp"
        android:text="@string/titulo_contrasena"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.755" />

    <Button
        android:id="@+id/button2"
        android:layout_width="345dp"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/purple"
        android:text="@string/Boton_registrar"
        android:textColor="@color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        tools:layout_editor_absoluteY="629dp" />


</androidx.constraintlayout.widget.ConstraintLayout>