<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:orientation="vertical"
    tools:context=".view.ui.fragments.reportarFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="32dp"
            android:layout_marginRight="20dp"
            android:background="@drawable/theme_gradients_background_blue">
            <ImageView
                android:layout_width="111dp"
                android:layout_height="120dp"
                android:layout_alignParentRight="true"
                android:src="@drawable/crashcar">
            </ImageView>
            <TextView
                android:layout_width="281dp"
                android:layout_height="115dp"
                android:layout_alignParentStart="true"
                android:layout_alignParentEnd="true"
                android:layout_marginStart="-11dp"
                android:layout_marginEnd="101dp"
                android:gravity="center"
                android:text="Reportar Siniestro"
                android:textColor="@color/black"
                android:textSize="40sp"
                android:textStyle="bold">
            </TextView>
        </RelativeLayout>
    </LinearLayout>

    <ScrollView
        android:layout_width="424dp"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:orientation="vertical"
            android:padding="15dp">

            <ImageView
                android:id="@+id/img_siniestro"
                android:layout_width="345dp"
                android:layout_height="300dp"
                android:background="@drawable/img_siniestro"
                android:layout_gravity="center"
                android:layout_marginRight="8dp"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_gravity="center"
                android:orientation="horizontal"
                android:padding="10dp"
                android:layout_marginRight="10dp">

                <Button
                    android:id="@+id/btn_camara_siniestro"
                    android:text="@string/camara"
                    android:layout_width="match_parent"
                    android:layout_weight="1"
                    android:layout_height="50dp"
                    android:layout_margin="20dp"
                    android:backgroundTint="@color/purple"
                    android:textColor="@color/white"/>

                <Button
                    android:id="@+id/btn_galeria_siniestro"
                    android:text="@string/galeria"
                    android:layout_width="match_parent"
                    android:layout_weight="1"
                    android:layout_height="50dp"
                    android:layout_margin="20dp"
                    android:backgroundTint="@color/purple"
                    android:textColor="@color/white"/>

            </LinearLayout>

            <Button
                android:id="@+id/btn_avanzar_to_descripcion"
                android:text="@string/siguiente"
                android:layout_width="345dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:backgroundTint="@color/purple"
                android:focusable="true"
                android:textColor="@color/white"/>
        </LinearLayout>
    </ScrollView>
</LinearLayout>