<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/white"
    android:orientation="vertical"
    tools:context=".view.ui.fragments.FotoPerfilFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="32dp"
            android:layout_marginRight="20dp"
            android:background="@drawable/theme_gradients_background_blue"
            >

            <ImageView
                android:id="@+id/foto_perfil_2"
                android:layout_width="111dp"
                android:layout_height="120dp"
                android:layout_alignParentRight="true"
                android:src="@drawable/camara"

                ></ImageView>

            <TextView
                android:layout_width="281dp"
                android:layout_height="115dp"
                android:layout_alignParentStart="true"
                android:layout_alignParentEnd="true"
                android:layout_marginStart="-11dp"
                android:layout_marginEnd="101dp"
                android:gravity="center"
                android:text="Foto Perfil"
                android:textColor="@color/black"
                android:textSize="40sp"
                android:textStyle="bold">
            </TextView>

        </RelativeLayout>

        <ScrollView
            android:layout_width="424dp"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/imageView">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:orientation="vertical"
                android:padding="15dp">

                <ImageView
                    android:id="@+id/img_perfil_2"
                    android:layout_width="200dp"
                    android:layout_height="200dp"
                    android:background="@drawable/img"
                    android:layout_gravity="center"
                    android:layout_marginRight="8dp"/>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_gravity="center"
                    android:orientation="horizontal"
                    android:padding="10dp"
                    android:layout_marginRight="10dp">

                    <Button
                        android:id="@+id/btn_camara"
                        android:text="@string/camara"
                        android:layout_width="match_parent"
                        android:layout_weight="1"
                        android:layout_height="50dp"
                        android:layout_margin="20dp"
                        android:backgroundTint="@color/purple"
                        android:textColor="@color/white"/>

                    <Button
                        android:id="@+id/btn_galeria"
                        android:text="@string/galeria"
                        android:layout_width="match_parent"
                        android:layout_weight="1"
                        android:layout_height="50dp"
                        android:layout_margin="20dp"
                        android:backgroundTint="@color/purple"
                        android:textColor="@color/white"/>

                </LinearLayout>


                <Button
                    android:id="@+id/btn_actualizarFoto"
                    android:text="@string/Boton_perfil"
                    android:layout_width="345dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:backgroundTint="@color/purple"
                    android:focusable="true"
                    android:textColor="@color/white"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/registrar_password"
                    app:layout_constraintVertical_bias="0.368" />
            </LinearLayout>
        </ScrollView>
    </LinearLayout>
</LinearLayout>